Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73830

Tapping with multiple touch screens causes touch press/release state to become mismatched/inconsistent.

XMLWordPrintable

    • Linux/X11
    • 1500d2283e17be72226b2960a79039254887977f (qt/qtbase/5.12)

      The UI is becoming frozen after a certain combination of touches from multiple touchscreens.

      This issue is also present in Qt 5.10.

      I can reproduce it on an embedded machine with X11, and using Ubuntu 18.10 (with both precompiled Qt deliveries and manually compiled kits).

      I have inspected the QAbstractNativeEventFilter for xorg and the events for the touch sequences are correct.

      To reproduce:

      1. Plug in two touch screen devices (device A and device B).
      2. Press and hold on device A.
      3. Press/release/press and hold on device B.
      4. Release device A.

      It doesn't happen every time. With this combination, I can reproduce the issue in about 1/5 tries.

      If I alt/tab or change focus to another app, and bring focus back to the Qt/QML app, it works again!

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            pauldotknopf Paul Knopf
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes